--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.56.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-transition-group": "^4.4.5",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
