--- a/package.json
+++ b/package.json
@@ -58,13 +58,14 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-toastify": "^4.1.0",
     "@types/react-transition-group": "^4.4.5",
-    "@typescript-eslint/eslint-plugin": "^5.45.1",
-    "@typescript-eslint/parser": "^5.45.1",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
     "autoprefixer": "^10.4.13",
     "craco-alias": "^3.0.1",
-    "eslint": "^8.29.0",
-    "eslint-plugin-react": "^7.31.11",
+    "eslint": "^8.32.0",
+    "eslint-plugin-react": "^7.32.1",
     "postcss": "^8.4.19",
+    "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4"
   }
 }
