--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.56.1",
+    "socket.io-client": "^4.5.4",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
