--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
 	"plugins": ["@typescript-eslint"],
 	"rules": {
 		"no-useless-escape": 0,
-		"no-mixed-spaces-and-tabs": 0
+		"no-mixed-spaces-and-tabs": 0,
+		"@typescript-eslint/no-empty-function": 0
 	}
 }
